package model;

import java.util.Objects;

public class Queen extends  Piece{
    public Queen(Integer color, Position position) {
        super(color, position);
    }

    @Override
    public void setMove(Piece[][] plateau){
        possibleMoves.clear();
        possibleCaptures.clear();

        int pX = this.getPosition().getX(), pY = this.getPosition().getY();

        for (int j = pY + 1; j < plateau.length; j++) {
            if (addMove(plateau, j, pX)) break;
        }
        for (int j = pY - 1; j > -1; j--) {
            if (addMove(plateau, j, pX)) break;
        }
        for (int i = pX + 1; i < plateau.length; i++) {
            if (addMove(plateau, pY, i)) break;
        }
        for (int i = pX - 1; i > -1; i--) {
            if (addMove(plateau, pY, i)) break;
        }

        for (int i = pX + 1, j = pY + 1; i < plateau.length && j < plateau.length; i++, j++) {
            if (addMove(plateau, j, i)) break;
        }
        for (int i = pX - 1, j = pY - 1; i > -1 && j > -1; i--, j--) {
            if (addMove(plateau, j, i)) break;
        }
        for (int i = pX + 1, j = pY - 1; i < plateau.length && j > -1; i++, j--) {
            if (addMove(plateau, j, i)) break;
        }
        for (int i = pX - 1, j = pY + 1; i > -1 && j < plateau.length; i--, j++) {
            if (addMove(plateau, j, i)) break;
        }

        setCapture(plateau);
    }

    private boolean addMove(Piece[][] plateau, int j, int i) {
        if (plateau[i][j] != null) {
            if (!Objects.equals(plateau[i][j].getColor(), this.getColor())) {
                possibleMoves.add(new Position(i, j));
            }
            return true;
        } else {
            possibleMoves.add(new Position(i, j));
            return false;
        }
    }
}
